--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -47,7 +47,7 @@
 </div>
 
 
-<div th:if="${message} != 'null'"  class="container">
+<div th:if="${message} != 'null'"  class="container" style="text-align: center">
     <ul class="pagination justify-content-center">
         <li class="page-item">
             <!--첫페이지 요청 링크-->
