--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -11,8 +11,8 @@
 
 
 <nav>
-    <div class="container">
-        <div class="btn-group">
+    <div class="container" style="position: relative">
+        <div class="btn-group" style="top: 0px; left: 20px; position: relative">
             <a th:href="@{/item/main(page=${page} ,sort='id' , size=${size})}"
                th:style="${sort.equals('id')} ? 'color: red' " style="color: black">최신순</a>
             <a th:href="@{/item/main(page=${page} ,sort='itemPrice' , size=${size})}"
@@ -23,7 +23,7 @@
 
 
         <!--정렬 버튼-->
-        <div class="btn-group dropdown" style="float: right">
+        <div class="btn-group dropdown" style="right:20px ;position:relative ; float: right">
             <button type="button" class="dropdown-toggle active" data-bs-toggle="dropdown"
                     aria-haspopup="true"
                     aria-expanded="true" th:text="${size}+'개씩보기'">
@@ -82,7 +82,7 @@
 
 
 
-    <div class="container ">
+    <div class="container" style="text-align: center">
         <div th:if="${!session.isEmpty()} and ${session.member.userId} == 'admin' ">
             <a href="/item/save" class="btn-success">상품등록</a>
         </div>
