--- a/src/main/resources/templates/orderPages/orderSave.html
+++ b/src/main/resources/templates/orderPages/orderSave.html
@@ -11,7 +11,18 @@
             src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/css/order.css}">
+    <!--  폰트-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap"
+          rel="stylesheet">
     <style>
+        * {
+            font-family: 'Jua', sans-serif;
+            font-family: 'Nanum Gothic', sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+
         .box {
             width: 50px;
             height: 50px;
@@ -26,7 +37,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container">
     <form action="/order/save" method="post">
@@ -36,23 +47,18 @@
         <table class="table">
             <tr>
                 <th>상품</th>
-                <th>상품이름</th>
-                <th>상품가격</th>
-                <th>상품수량</th>
-                <th>총가격</th>
+                <th style="padding-left: 250px;">상품이름</th>
+                <th style="width: 136px;">상품가격</th>
+                <th style="width: 56px;">상품수량</th>
+                <th style="width: 58px;">총가격</th>
             </tr>
             <tr>
                 <td class="box"><img class="profile" th:src="@{|/upload/${item.itemImage}}" alt=""></td>
                 <td><input id="itemName" type="text" name="orderName" th:value="${item.itemName}" class="form-control" readonly></td>
-                <td><input type="text" name="itemPrice" th:value="${item.itemPrice}" class="form-control" readonly></td>
-                <td>
-                    <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}"
-                           name="orderCount"
-                           onchange="total()">
+                <td><input type="text" name="itemPrice" th:value="${item.itemPrice}+'원'" class="form-control" readonly></td>
+                <td><input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}" name="orderCount" onchange="total()">
                 </td>
-                <td>
-                    <input type="text" th:value="${item.itemPrice * item.cartCount}" name="orderPrice" id="totalPrice"
-                           readonly>
+                <td><input type="text" th:value="${item.itemPrice * item.cartCount}+'원'" name="orderPrice" id="totalPrice" readonly>
                 </td>
             </tr>
         </table>
@@ -108,10 +114,6 @@
     </form>
     </article>
 </div>
-<a href="/cart/save">장바구니</a>
-<a href="/order/save">바로구매</a>
-
-
 </body>
 <script th:inline="javascript">
 
