--- a/src/main/resources/templates/orderPages/orderSave2.html
+++ b/src/main/resources/templates/orderPages/orderSave2.html
@@ -12,7 +12,18 @@
             src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/css/order.css}">
+    <!--  폰트-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap"
+          rel="stylesheet">
     <style>
+        * {
+            font-family: 'Jua', sans-serif;
+            font-family: 'Nanum Gothic', sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+
         .box {
             width: 50px;
             height: 50px;
@@ -27,7 +38,7 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container">
     <form action="/order/save" method="post">
@@ -36,17 +47,17 @@
         <table class="table">
             <tr>
                 <th>상품</th>
-                <th>상품이름</th>
-                <th>상품가격</th>
-                <th>상품수량</th>
-                <th>총가격</th>
+                <th style="padding-left: 250px;">상품이름</th>
+                <th style="width: 136px;">상품가격</th>
+                <th style="width: 56px;">상품수량</th>
+                <th style="width: 58px;">총가격</th>
             </tr>
             <tr th:each="item: ${cartList}">
                 <input type="hidden" name="cartItemId" th:value="${item.id}">
                 <td class="box"><img class="profile" th:src="@{|/upload/${item.itemImage}}" alt=""></td>
                 <td><input id="itemName" type="text" name="orderName" th:value="${item.itemName}" class="form-control"
                            readonly></td>
-                <td><input type="text" name="itemPrice" th:id="${item.id}" th:value="${item.itemPrice}"
+                <td><input type="text" name="itemPrice" th:id="${item.id}" th:value="${item.itemPrice}+'원'"
                            class="form-control" readonly></td>
                 <td>
                     <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}"
@@ -54,7 +65,7 @@
                            th:onchange="total([[${item}]])" readonly>
                 </td>
                 <td>
-                    <input type="text" th:value="${item.itemPrice * item.cartCount}" name="orderPrice"
+                    <input type="text" th:value="${item.itemPrice * item.cartCount}+'원'" name="orderPrice"
                            th:id="totalPrice+${item.id}"
                            readonly>
                 </td>
@@ -62,7 +73,7 @@
             </tr>
             <tr>
                 <td colspan="4">총 결제금액</td>
-                <td><input type="text" name="itemPriceTotal" id="itemPriceTotal" th:value="${itemPriceTotal}" readonly>
+                <td><input type="text" name="itemPriceTotal" id="itemPriceTotal" th:value="${itemPriceTotal}+'원'" readonly>
                 </td>
             </tr>
         </table>
@@ -118,11 +129,7 @@
     </form>
     </article>
 </div>
-<a href="/cart/save">장바구니</a>
-<a href="/order/save">바로구매</a>
 <input type="button" value="테스트" onclick="test()">
-
-
 </body>
 <script th:inline="javascript">
     const test = () => {
