--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,7 +92,7 @@
                                         <p class="read"><a th:href="@{/item/(itemId=${item.id})}"
                                                            th:text="${item.itemName}"></a>
                                         </p>
-                                        <em th:text="${#numbers.formatCurrency(item.itemPrice)}"></em>
+                                        <em style=" font: italic bold 1em Georgia, serif ;" th:text="${#numbers.formatCurrency(item.itemPrice)}"></em>
                                         </p>
                                     </a>
                                     </li>
