카카오페이 이미지 적용

--- a/src/main/resources/templates/orderPages/orderSave2.html
+++ b/src/main/resources/templates/orderPages/orderSave2.html
@@ -47,10 +47,11 @@
         <table class="table">
             <tr>
                 <th>상품</th>
-                <th style="padding-left: 250px;">상품이름</th>
-                <th style="width: 136px;">상품가격</th>
-                <th style="width: 56px;">상품수량</th>
-                <th style="width: 58px;">총가격</th>
+                <th style="padding-left: 150px;">상품이름</th>
+                <th style="width: 136px; padding-left: 40px">상품가격</th>
+                <th style="width: 56px; padding-left: 40px;">상품수량</th>
+                <th style="width: 116px; padding-left: 50px;">배송비</th>
+                <th style="width: 216px; padding-left: 60px;">총가격</th>
             </tr>
             <tr th:each="item: ${cartList}">
                 <input type="hidden" name="cartItemId" th:value="${item.id}">
@@ -62,29 +63,30 @@
                 <td>
                     <input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}"
                            name="orderCount"
-                           th:onchange="total([[${item}]])" readonly>
+                           th:onchange="total([[${item}]])" style="padding-left: 50px" readonly>
                 </td>
+                <td style="padding-left: 55px;">무료</td>
                 <td>
                     <input type="text" th:value="${item.itemPrice * item.cartCount}+'원'" name="orderPrice"
-                           th:id="totalPrice+${item.id}"
+                           th:id="totalPrice+${item.id}" style="padding-left: 50px;"
                            readonly>
                 </td>
 
             </tr>
-            <tr>
-                <td colspan="4">총 결제금액</td>
-                <td><input type="text" name="itemPriceTotal" id="itemPriceTotal" th:value="${itemPriceTotal}+'원'" readonly>
-                </td>
-            </tr>
         </table>
+                <h3 style="float: left">총 결제금액</h3>
+                <h2 name="itemPriceTotal" id="itemPriceTotal" th:text="${itemPriceTotal}+'원'" style="float: right;color: seagreen; font-weight: bold">
+                </h2>
+
+
 
 
         <article class="as">
 
-            <article class="info">
+            <article class="info" style="margin-top: 30px">
 
                 <header>
-                    <h2>주문 신청</h2>
+                    <h2 style="padding-top: 150px;"> 주문 신청</h2>
 
                     <div>
                         <p>①&nbsp고객정보 입력</p>
@@ -121,7 +123,8 @@
                     <div>
                         <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block"
                                name="memberEmail" id="memberEmail">
-                        <button id="check_module" type="button" onclick="requestPay()">테스트 결제</button>
+<!--                        <button id="check_module" type="button" onclick="requestPay()">테스트 결제</button>-->
+                        <a id="check_module" role="button" onclick="requestPay()"><img th:src="@{/img/kakaoPayLogo.jpg}" width="60px" height="30px" style="width: 60px;"></a>
                     </div>
                 </section>
             </article>
