--- a/src/main/resources/templates/orderPages/orderSave.html
+++ b/src/main/resources/templates/orderPages/orderSave.html
@@ -48,17 +48,23 @@
             <tr>
                 <th>상품</th>
                 <th style="padding-left: 250px;">상품이름</th>
-                <th style="width: 136px;">상품가격</th>
+                <th style="width: 136px; padding-left: 40px">상품가격</th>
                 <th style="width: 56px;">상품수량</th>
+                <th>배송비</th>
                 <th style="width: 58px;">총가격</th>
             </tr>
             <tr>
                 <td class="box"><img class="profile" th:src="@{|/upload/${item.itemImage}}" alt=""></td>
-                <td><input id="itemName" type="text" name="orderName" th:value="${item.itemName}" class="form-control" readonly></td>
-                <td><input type="text" name="itemPrice" th:value="${item.itemPrice}+'원'" class="form-control" readonly></td>
-                <td><input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}" name="orderCount" onchange="total()">
+                <td><input id="itemName" type="text" name="orderName" th:value="${item.itemName}" class="form-control"
+                           readonly></td>
+                <td><input type="text" name="itemPrice" th:value="${item.itemPrice}+'원'" class="form-control" readonly>
                 </td>
-                <td><input type="text" th:value="${item.itemPrice * item.cartCount}+'원'" name="orderPrice" id="totalPrice" readonly>
+                <td><input type="number" id="itemCountInput" min="1" max="100" th:value="${item.cartCount}"
+                           name="orderCount" onchange="total()" style="padding-left: 20px">
+                </td>
+                <td>무료</td>
+                <td><input type="text" th:value="${item.itemPrice * item.cartCount}+'원'" name="orderPrice"
+                           id="totalPrice" readonly>
                 </td>
             </tr>
         </table>
@@ -77,7 +83,6 @@
                     </div>
                 </header>
 
-
                 <section>
                     <div>
                         <input type="text" th:value="${session.member.memberName}" readonly style="display: block"
@@ -88,8 +93,12 @@
                         <input type="text" th:value="${session.member.memberMobile}" readonly style="display: block"
                                name="memberMobile" id="memberMobile">
                     </div>
-                </section>
 
+                    <div>
+                        <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block"
+                               name="memberEmail" id="memberEmail">
+                    </div>
+                </section>
 
                 <section>
                     <div>
@@ -104,11 +113,11 @@
 
                 <section>
                     <div>
-                        <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block"
-                               name="memberEmail" id="memberEmail">
-                        <button id="check_module" type="button" onclick="requestPay()">테스트 결제</button>
+                        <!--<button id="check_module" type="button" onclick="requestPay()">테스트 결제</button>-->
+                        <a id="check_module" role="button" onclick="requestPay()"><img th:src="@{/img/kakaoPayLogo.jpg}" width="60px" height="30px" style="width: 60px;"></a>
                     </div>
                 </section>
+
             </article>
         </article>
     </form>
@@ -119,7 +128,7 @@
 
     function requestPay() {
         const itemName = document.getElementById("itemName").value;
-        let totalPrice =document.getElementById("totalPrice").value;
+        let totalPrice = document.getElementById("totalPrice").value;
         const memberEmail = document.getElementById("memberEmail").value;
         const memberName = document.getElementById("memberName").value;
         const memberMobile = document.getElementById("memberMobile").value;
@@ -132,22 +141,22 @@
         IMP.request_pay({
             pg: "kakaopay",
             pay_method: "card",
-            merchant_uid : 'merchant_'+new Date().getTime(),
-            name : itemName,
-            amount : totalPrice,
-            buyer_email : memberEmail,
-            buyer_name : memberName,
-            buyer_tel : memberMobile,
-            buyer_addr : memberAddress + detailAddress+ extraAddress,
-            buyer_postcode : postcode,
+            merchant_uid: 'merchant_' + new Date().getTime(),
+            name: itemName,
+            amount: totalPrice,
+            buyer_email: memberEmail,
+            buyer_name: memberName,
+            buyer_tel: memberMobile,
+            buyer_addr: memberAddress + detailAddress + extraAddress,
+            buyer_postcode: postcode,
         }, function (rsp) { // callback
             if (rsp.success) {
                 form.submit();
                 console.log(rsp);
                 var msg = '결제가 완료되었습니다.\n';
-                msg += '고유ID : ' + rsp.imp_uid+"\n";
-                msg += '상점 거래ID : ' + rsp.merchant_uid+"\n";
-                msg += '결제 금액 : ' + rsp.paid_amount+'원\n';
+                msg += '고유ID : ' + rsp.imp_uid + "\n";
+                msg += '상점 거래ID : ' + rsp.merchant_uid + "\n";
+                msg += '결제 금액 : ' + rsp.paid_amount + '원\n';
                 msg += '카드 승인번호 : ' + rsp.apply_num;
             } else {
                 console.log(rsp);
@@ -165,7 +174,7 @@
         const detailAddress = document.querySelector('input[name=detailAddress]');
         const extraAddress = document.querySelector('input[name=extraAddress]');
         const postcode = document.querySelector('input[name=postcode]');
-        if(document.querySelector('input[type=checkbox]').checked) {
+        if (document.querySelector('input[type=checkbox]').checked) {
             memberAddress.value = [[${session.member.memberAddress}]];
             detailAddress.value = [[${session.member.detailAddress}]];
             extraAddress.value = [[${session.member.extraAddress}]];
