--- a/src/main/resources/templates/questionPages/questionList.html
+++ b/src/main/resources/templates/questionPages/questionList.html
@@ -52,7 +52,7 @@
     </table>
     <div class="wrap" style="float: right">
         <div class="search">
-            <!-- 부드스트랩 검색창 -->
+            <!-- 부트스트랩 검색창 -->
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
                     <select class="form-control" id="searchType">
