--- a/src/main/resources/templates/memberPages/memberList.html
+++ b/src/main/resources/templates/memberPages/memberList.html
@@ -6,18 +6,44 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!--  //시간설정-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!--  폰트-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&display=swap"
+          rel="stylesheet">
+    <style>
+        *{
+            font-family: 'Jua', sans-serif;
+            font-family: 'Nanum Gothic', sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+        span{
+            color: seagreen;
+        }
+        .pagination>.active>a,
+        .pagination>.active>a:focus,
+        .pagination>.active>a:hover,
+        .pagination>.active>span,
+        .pagination>.active>span:focus,
+        .pagination>.active>span:hover {
+            /*css 우선순위 강제적용*/
+            background-color: seagreen !important;
+            border-color: seagreen !important;
+        }
+    </style>
 </head>
-<body>
+<body style="background-color: white">
 <th:block th:replace="commonPages/header :: header"></th:block>
 <div class="container">
     <table class="table table-striped table-hover text-center mt-5">
         <tr>
-            <th>번호</th>
-            <th>아이디</th>
-            <th>이메일</th>
-            <th>이름</th>
-            <th>전화번호</th>
-            <th>가입일자</th>
+            <th style="text-align: center">번호</th>
+            <th style="text-align: center">아이디</th>
+            <th style="text-align: center">이메일</th>
+            <th style="text-align: center">이름</th>
+            <th style="text-align: center">전화번호</th>
+            <th style="text-align: center">가입일자</th>
+            <th style="text-align: center">상세조회</th>
         </tr>
         <tr th:each="member: ${memberList}">
             <td th:text="${member.id}"></td>
@@ -30,7 +56,7 @@
         </tr>
     </table>
 </div>
-<div class="container">
+<div class="container" style="text-align: center">
     <ul class="pagination justify-content-center">
         <li class="page-item">
             <!--첫페이지 요청 링크 /board?page=1-->
